[gd_scene load_steps=4 format=3 uid="uid://bukr5hyq68ulg"]

[ext_resource type="Script" path="res://src/menu/title_screen.gd" id="1_r5cuc"]
[ext_resource type="Theme" uid="uid://bwxsv6uwdv14g" path="res://assets/menu.tres" id="1_wc5xd"]
[ext_resource type="Texture2D" uid="uid://bjeo3b77th7pw" path="res://assets/minicave-removebg-preview.png" id="3_knceb"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wc5xd")
script = ExtResource("1_r5cuc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -196.0
offset_right = 200.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_knceb")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "options"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "tutorial"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
